k8s-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  labels:
    app: eureka-service
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: eureka-service
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: eureka-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: eureka-service
        version: v2
    spec:
      containers:
      - name: eureka-service
        image: 076880417388.dkr.ecr.cn-northwest-1.amazonaws.com.cn/eureka-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: ecr-secret
